# neat

./: Cargo.toml
src/: ga.rs  genes.rs  lib.rs  phenotype.rs  species.rs  utils.rs
