[package]
name = "neat"
version = "1.0.2"
authors = ["planet0104 <planet0104@gmail.com>"]
edition = "2018"

[dependencies]
svg = "0.5.12"

[target.'cfg(not(any(target_arch = "asmjs", target_arch = "wasm32")))'.dependencies]
rand = "0.6.5"

[target.'cfg(any(target_arch = "asmjs", target_arch = "wasm32"))'.dependencies]
wasm-bindgen = "0.2.45"
stdweb = "0.4.17"