[package]
name = "neat"
version = "1.0.2"
authors = ["planet0104 <planet0104@gmail.com>"]
edition = "2018"

[dependencies]
svg = "0.5.12"
serde = { version="1.0.98", features=["derive"] }
bincode = "1.1.4"
crossbeam-utils = "0.6.6"
num_cpus = "1.10.1"

[target.'cfg(not(all(target_arch="wasm32", target_os="unknown")))'.dependencies]
rand = "0.6.5"

[target.'cfg(all(target_arch="wasm32", target_os="unknown"))'.dependencies]
stdweb = "0.4.17"